Sinatra Flash added - successful signup message displayed

--- a/views/error.erb
+++ b/views/error.erb
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    Looks like you’ve already registered with this email. Want to <a href="/signin">sign in</a>?
+    Email or password error. Want to <a href="/signin">sign in</a> or <a href="/signup">sign up</a>?
   </body>
 </html>
